--- a/Views/AnnouncementItem.cshtml
+++ b/Views/AnnouncementItem.cshtml
@@ -1,4 +1,4 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.NewsItem>
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.AnnouncementItem>
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
 	Layout = "master.cshtml";
@@ -72,5 +72,4 @@
 	</div>
 </div>
 
-
-@Html.Partial("~/Views/Partials/listBerita.cshtml")
+@Html.Partial("~/Views/Partials/listPengumuman.cshtml")
