--- a/Views/ContactPage.cshtml
+++ b/Views/ContactPage.cshtml
@@ -4,6 +4,63 @@
 	Layout = "master.cshtml";
 }
 
-<div class="kontak-form">
-	@Model.ContactForm
+
+<div class="tentang-jumbotron">
+	<img src="@Model.HeroBackgroundImage.Url()" class="blueprint">
+	<img src="/images/pertamina-warnawarni.png" class="pertamina-warnawarni">
+	<div class="container-fluid content">
+		<h1>@Model.HeroTitle</h1>
+		<h2>@Model.HeroSubtitle</h2>
+	</div>
+</div>
+<div class="container kontak-container" data-aos="fade-up">
+	<div class="kontak-content">
+		<div class="kontak-alamat">
+			<h3>@Model.AddressTitle</h3>
+			<p>@Model.AddressAddress</p>
+			<a href="@Model.AddressLink.Url">@Model.AddressLink.Name</a>
+		</div>
+		<div class="kontak-mediasosial">
+			<h3>@Model.SocmedTitle</h3>
+			<div class="mediasosial-list">
+				@if (Model.ContactFacebookLink != null)
+				{
+					<a href="@Model.ContactFacebookLink.Url"><i
+						class="fa-brands fa-facebook"></i>@Model.ContactFacebookLink.Name</a>
+				}
+			</div>
+			<div class="mediasosial-list">
+				@if (Model.ContactInstagramLink != null)
+				{
+					<a href="@Model.ContactInstagramLink.Url"><i
+						class="fa-brands fa-instagram"></i>@Model.ContactInstagramLink.Name</a>
+				}
+			</div>
+			<div class="mediasosial-list">
+				@if (Model.ContactTwitterLink != null)
+				{
+					<a href="@Model.ContactTwitterLink.Url"><i
+						class="fa-brands fa-twitter"></i>@Model.ContactTwitterLink.Name</a>
+				}
+			</div>
+		</div>
+	</div>
+	<div class="kontak-form">
+		@*Model.FormContactUs *@
+		@* === GAK TAU FORM KONTAK INI ERROR === *@
+	</div>
+</div>
+
+<div class="modal-pesan-terkirim" style="display: none;">
+	<div class="modal-pesan-terkirim-popup">
+		<div class="modal-pesan-terkirim-x">
+			<i class="fa-solid fa-x"></i>
+		</div>
+		<img src="/images/vector-upload.svg">
+		<div class="konten">
+			<h3>@Model.ModalContactTitle</h3>
+			<h4>@Model.ModalContactSubtitle</h4>
+		</div>
+	</div>
+	<div class="bg-hitam-transparent-modal" id="bg-hitam"></div>
 </div>
