--- a/Views/OurProjectsPage.cshtml
+++ b/Views/OurProjectsPage.cshtml
@@ -3,3 +3,73 @@
 @{
 	Layout = "master.cshtml";
 }
+
+
+<div class="tentang-jumbotron">
+	<img src="@Model.HeroBackgroundImage.Url()" class="blueprint">
+	<img src="/images/pertamina-warnawarni.png" class="pertamina-warnawarni">
+	<div class="container-fluid content">
+		<h1>@Model.HeroTitle</h1>
+		<h2>@Model.HeroSubtitle</h2>
+	</div>
+</div>
+<div class="bisnis-navbar">
+	<div class="container bisnis-navbar-list">
+
+		@Html.Partial("~/Views/Partials/navbarBusiness.cshtml")
+		<div class="bisnis-navbar-arrowdown" id="bisnis-navbar-arrowdown">
+			<a class="active">@Model.Name</a>
+			<i class="fa-solid fa-chevron-down panah-bawah"></i>
+			<i class="fa-solid fa-chevron-up panah-atas"></i>
+		</div>
+	</div>
+</div>
+
+<div class="container container-projects-image">
+    <img class="project-location" src="@Model.ProjectsLocation.Url()">
+    <img src="@Model.ProjectsFeatures.Url()">
+</div>
+
+<div class="container">
+    <div class="bbm">
+        <h2>@Model.BbmTitle</h2>
+        <div class="bbm-flex">
+            <div class="bbm-produk">
+                <h3>@Model.BbmProductTitle</h3>
+                <div class="bbm-produk-list">
+                    @foreach(var item in Model.BbmProducts){
+                        <h4>@item</h4>
+                    }
+                </div>
+            </div>
+            <div class="bbm-image">
+                <img src="@Model.BbmImage.Url()">
+            </div>
+        </div>
+    </div>
+    
+    <div class="produk-lainnya">
+        <h2>@Model.ProdukLainnyaTitle</h2>
+		<div class="produk-lainnya-image">
+			<img src="@Model.ProdukLainnyaImage.Url()">
+		</div>
+		<div class="produk-lainnya-wrapper">
+			<div class="produk-lainnya-produk-title-flex">
+				<h3>@Model.ProdukLainnyaProdukTitle</h3>
+				<h3>@Model.ProdukLainnyaTotalTitle</h3>
+			</div>
+			@foreach(var item in Model.ProdukLainnyaList){
+				<div class="produk-lainnya-list">
+					<h4>@item.ProductsKey</h4>
+					<h4>@item.ProductsValue</h4>
+				</div>
+			}
+			<div class="produk-lainnya-total-flex">
+				<h3>Total</h3>
+				<h3>@Model.ProdukLainnyaTotalValue</h3>
+			</div>
+		</div>
+    </div>
+</div>
+
+
