--- a/Views/WhoWeArePage.cshtml
+++ b/Views/WhoWeArePage.cshtml
@@ -40,7 +40,7 @@
 			<h3>@Model.FaseTitle</h3>
 			<img src="@Model.FaseImage.Url()" alt="fase">
 			<p>
-				Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus cumque cupiditate obcaecati eaque facere eius adipisci quo facilis repellat, eos minus laboriosam praesentium vero et. Animi consectetur optio totam error?
+				@Model.FaseContent
 			</p>
 		</div>
 	</div>
