--- a/Views/master.cshtml
+++ b/Views/master.cshtml
@@ -25,7 +25,7 @@
 	
 	<link rel="icon" type="image/x-icon" href="@favicon.Url()">
     
-    <link rel="stylesheet" href="@Url.Content("~/css/style9.css")" />
+    <link rel="stylesheet" href="@Url.Content("~/css/style16.css")" />
 	<link rel="stylesheet" href="@Url.Content("~/css/bootstrap.css")" />
 	<link rel="stylesheet" href="@Url.Content("~/css/CustomRichTextEditor.css")" />
 	<script src="https://www.google.com/recaptcha/api.js" defer></script>
@@ -90,7 +90,7 @@
 
     <script type="text/javascript" src="/scripts/bootstrap.js"></script>
 
-	<script type="text/javascript" src="/scripts/script.js"></script>
+	<script type="text/javascript" src="/scripts/script2.js"></script>
 
 	<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.0.0.min.js"></script>
 	<script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.16.0/jquery.validate.min.js"></script>
