--- a/Views/ContactPage.cshtml
+++ b/Views/ContactPage.cshtml
@@ -1,5 +1,7 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.ContactPage>
 @using ContentModels = Umbraco.Web.PublishedModels;
+@using App_Code.Models
+
 @{
 	Layout = "master.cshtml";
 }
@@ -46,8 +48,7 @@
 		</div>
 	</div>
 	<div class="kontak-form">
-		@*Model.FormContactUs *@
-		@* === GAK TAU FORM KONTAK INI ERROR === *@
+		@{ Html.RenderPartial("~/Views/Partials/Forms/Contact/Messages.cshtml", new ContactMessagesModel()); }
 	</div>
 </div>
 
