--- a/Views/Partials/Forms/Contact/Messages.cshtml
+++ b/Views/Partials/Forms/Contact/Messages.cshtml
@@ -1,7 +1,7 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<App_Code.Models.ContactMessagesModel>
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<PertaminaPrpp.Models.ContactFormModel>
 
-@using App_Code.Controllers
-@using App_Code.Models
+@using PertaminaPrpp.Controllers
+@using PertaminaPrpp.Models
 
 @{
     
