--- a/Views/Partials/Forms/Contact/Messages.cshtml
+++ b/Views/Partials/Forms/Contact/Messages.cshtml
@@ -1,7 +1,7 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<PertaminaPrpp.Models.ContactFormModel>
+﻿@using App_Data.Controllers;
+@using ContentModels = Umbraco.Web.PublishedModels;
 
-@using PertaminaPrpp.Controllers
-@using PertaminaPrpp.Models
+@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.ContactFormModel>
 
 @{
     
