Commit - Update contact controller & model

--- a/Views/ContactPage.cshtml
+++ b/Views/ContactPage.cshtml
@@ -1,6 +1,7 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.ContactPage>
-@using ContentModels = Umbraco.Web.PublishedModels;
-@using Umbraco.Web.PublishedModels;
+﻿@using ContentModels = Umbraco.Web.PublishedModels;
+@using App_Data.Models;
+
+@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.ContactPage>
 
 @{
 	Layout = "master.cshtml";
