--- a/Views/Partials/Forms/Contact/Messages.cshtml
+++ b/Views/Partials/Forms/Contact/Messages.cshtml
@@ -1,7 +1,7 @@
 ﻿@using App_Data.Controllers;
-@using ContentModels = Umbraco.Web.PublishedModels;
+@using App_Data.Models;
 
-@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.ContactFormModel>
+@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContactFormModel>
 
 @{
     
