Commit - Namespace App_Code

--- a/Views/ContactPage.cshtml
+++ b/Views/ContactPage.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ContentModels = Umbraco.Web.PublishedModels;
-@using App_Data.Models;
+@using App_Code.Models;
 
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.ContactPage>
 
