--- a/Views/Partials/Forms/Contact/Messages.cshtml
+++ b/Views/Partials/Forms/Contact/Messages.cshtml
@@ -1,5 +1,5 @@
-﻿@using App_Data.Controllers;
-@using App_Data.Models;
+﻿@using App_Code.Controllers;
+@using App_Code.Models;
 
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<ContactFormModel>
 
