--- a/Views/Partials/Forms/Contact/Messages.cshtml
+++ b/Views/Partials/Forms/Contact/Messages.cshtml
@@ -1,7 +1,7 @@
-﻿@using App_Code.Controllers;
-@using App_Code.Models;
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<App_Code.Models.ContactFormModel>
 
-@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContactFormModel>
+@using App_Code.Controllers;
+@using App_Code.Models;
 
 @{
     
