--- a/Views/ContactPage.cshtml
+++ b/Views/ContactPage.cshtml
@@ -1,7 +1,7 @@
-﻿@using ContentModels = Umbraco.Web.PublishedModels;
-@using App_Code.Models;
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.ContactPage>
 
-@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.ContactPage>
+@using ContentModels = Umbraco.Web.PublishedModels;
+@using App_Code.Models;
 
 @{
 	Layout = "master.cshtml";
