Commit - Contact Page

--- a/Views/ContactPage.cshtml
+++ b/Views/ContactPage.cshtml
@@ -49,7 +49,7 @@
 		</div>
 	</div>
 	<div class="kontak-form">
-		@* @{ Html.RenderPartial("~/Views/Partials/Forms/Contact/Messages.cshtml", new ContactFormModel()); } *@
+		@{ Html.RenderPartial("~/Views/Partials/Forms/Contact/Messages.cshtml", new ContactFormModel()); }
 	</div>
 </div>
 
