--- a/Views/AboutPetrokimiaPage.cshtml
+++ b/Views/AboutPetrokimiaPage.cshtml
@@ -7,7 +7,7 @@
 
 <div class="tentang-jumbotron">
 	<img src="@Model.HeroBackgroundImage.Url()" class="blueprint">
-	<img src="/images/pertamina-warnawarni.png" class="pertamina-warnawarni">
+	@* <img src="/images/pertamina-warnawarni.png" class="pertamina-warnawarni"> *@
 	<div class="container-fluid content">
 		<h1>@Model.HeroTitle</h1>
 		<h2>@Model.HeroSubtitle</h2>
@@ -26,23 +26,24 @@
 </div>
 
 <div class="container rich-text-content">
-    @Model.TentangPetrokimiaContent
+	@Model.TentangPetrokimiaContent
 </div>
-<div style="background-image:url('@Model.PeranBackgroundImage.Url()')"  class="peran-wrapper">
+<div style="background-image:url('@Model.PeranBackgroundImage.Url()')" class="peran-wrapper">
 	<div class="container container-peran">
 		<h4>@Model.PeranTitle</h4>
 		<div class="peran-grid">
-		    @foreach (var item in Model.PeranList){
-		        <div class="peran-list">
-    				<div class="gambar">
-    					<img src="@item.PeranImage.Url()">
-    				</div>
-    				<div class="konten">
-    					<p>@item.PeranContent</p>
-    				</div>
-    			</div>
-		    }
-			
+			@foreach (var item in Model.PeranList)
+			{
+				<div class="peran-list">
+					<div class="gambar">
+						<img src="@item.PeranImage.Url()">
+					</div>
+					<div class="konten">
+						<p>@item.PeranContent</p>
+					</div>
+				</div>
+			}
+
 		</div>
 	</div>
 </div>
