--- a/Views/GovernanceAndBusinessEthicsPage.cshtml
+++ b/Views/GovernanceAndBusinessEthicsPage.cshtml
@@ -26,7 +26,7 @@
 
 
 
-<div class="container container-tata-kelola">
+<div class="container container-tata-kelola rich-text-content">
         <h4>@Model.GovernanceContentTitle</h4>
         <p>@Model.GovernanceContentText</p>
     </div>
