--- a/Views/HomePage.cshtml
+++ b/Views/HomePage.cshtml
@@ -184,6 +184,7 @@
 						</div>
 						<h3>@item.CardTanggungjawabTitle</h3>
 						<p>@item.CardTanggungjawabDescription</p>
+						<a href="@item.CardTanggungjawabLink.Url">@item.CardTanggungjawabLink.Name <i class="fa-solid fa-arrow-right"></i></a>
 					</div>
 				</div>
 			}
