--- a/Views/SustainableBusinessPage.cshtml
+++ b/Views/SustainableBusinessPage.cshtml
@@ -26,7 +26,8 @@
 </div>
 
 <div class="container sustainable-container rich-text-content">
-    @Model.SustainableBusinessContent
+    <h4>@Model.SustainableBusinessContentTitleHijau</h4>
+    <p>@Model.SustainableBusinessContent</p>
 </div>
 
 <div class="container sustainable-business-image">
