--- a/Views/ProcurementsPage.cshtml
+++ b/Views/ProcurementsPage.cshtml
@@ -15,8 +15,8 @@
 </div>
 
 <div class="pengadaan-wrapper">
-	<div class="container">
-		<h6>@Model.PengadaanContentTitle</h6>
+	<div class="container rich-text-content">
+		<h4>@Model.PengadaanContentTitle</h4>
 		<p>@Model.PengadaanContentText</p>
 	</div>
 </div>
