--- a/Views/WhoWeArePage.cshtml
+++ b/Views/WhoWeArePage.cshtml
@@ -25,7 +25,12 @@
 </div>
 
 <div class="container whoweare-content rich-text-content">
-	@Model.WhoweareContent
+    <img src="@Model.WhoweareContentImage1.Url()" class="w-50 rich-float-left">
+    <h4>@Model.WhoweareContentTitleHijau</h4>
+    <h3>@Model.WhoweareContentTitle</h3>
+    <p>@Model.WhoweareContent</p>
+    <img src="@Model.WhoweareContentImage2.Url()" class="w-100">
+    <p>@Model.WhoweareContentBawah</p>
 </div>
 
 @*
