benerin frontend contact form

--- a/Views/Partials/Forms/Contact/Messages.cshtml
+++ b/Views/Partials/Forms/Contact/Messages.cshtml
@@ -11,23 +11,23 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="formbox ">
-        <div class="formbox-field">
-            <label class="formbox-label" for="contactNama">Nama</label>
-            <input id="contactNama" class="form-control" type="text" name="Nama" required />
+    <div class=" ">
+        <div class="form-input">
+            <label class="" for="contactNama">Name</label>
+            <input id="contactNama" class="" type="text" name="Nama"  placeholder="Input Your Name" required />
         </div>
-        <div class="formbox-field">
-            <label class="formbox-label" for="contactEmail">Email</label>
-            <input id="contactEmail" class="form-control" type="text" name="Email" required />
+        <div class="form-input">
+            <label class="" for="contactEmail">Email</label>
+            <input id="contactEmail" class="" type="text" name="Email"  placeholder="Input Your Email" required />
         </div>
-        <div class="formbox-field">
-            <label class="formbox-label" for="contactPesan">Pesan Anda</label>
-            <textarea id="contactPesan" class="form-control" name="Pesan" required></textarea>
+        <div class="form-input">
+            <label class="" for="contactPesan">Your Message</label>
+            <textarea id="contactPesan" class="" name="Pesan"  placeholder="Write your message, and we will contact you as soon as possible" required></textarea>
         </div>
     </div>
-    <div class="formbox">
-        <div class="formbox-body">
-            <div class="formbox-action">
+    <div class="">
+        <div class="">
+            <div class="">
                 <button class="action" type="submit">Kirim <i class="fa-solid fa-arrow-right"></i></button>
             </div>
         </div>
