benerin card di home, vw di navbar dan home-main-slider

--- a/Views/HomePage.cshtml
+++ b/Views/HomePage.cshtml
@@ -29,12 +29,12 @@
 	</div>
 </div>
 
-<div class="fluid-container px-5 home-tentang">
-	<div class="row home-tentang-row">
-		<div class="home-tentang-gambar col-md-6" data-aos="fade-right">
+<div class=" px-3 home-tentang">
+	<div class="home-tentang-row">
+		<div class="home-tentang-gambar" data-aos="fade-right">
 			<img src="@Model.TentangGambar.Url()" class="home-tentang-pabrik">
 		</div>
-		<div class="home-tentang-content col-md-6" data-aos="fade-left">
+		<div class="home-tentang-content" data-aos="fade-left">
 			<h3>@Model.TentangTitleHijau</h3>
 			<h2>@Model.TentangTitle</h2>
 			<p>@Model.TentangContent</p>
