benerin verifikasi recaptcha

--- a/Views/ContactPage.cshtml
+++ b/Views/ContactPage.cshtml
@@ -66,3 +66,10 @@
 	</div>
 	<div class="bg-hitam-transparent-modal" id="bg-hitam"></div>
 </div>
+
+<script defer>
+	function enableBtn(){
+        document.getElementById("submit_details").disabled = false;
+    }
+
+</script>
