--- a/Views/ManagementPage.cshtml
+++ b/Views/ManagementPage.cshtml
@@ -26,8 +26,8 @@
 </div>
 
 <div class="container manajemen-menu">
-	<button class="pilih-manajemen active" id="tombol-direksi">Direksi</button>
-	<button class="pilih-manajemen" id="tombol-komisaris">Dewan Komisaris</button>
+	<button class="pilih-manajemen active" id="tombol-direksi">@Umbraco.GetDictionaryValue("button direksi")</button>
+	<button class="pilih-manajemen" id="tombol-komisaris">@Umbraco.GetDictionaryValue("button komisaris")</button>
 </div>
 
 
