--- a/Views/Partials/Forms/Contact/Messages.cshtml
+++ b/Views/Partials/Forms/Contact/Messages.cshtml
@@ -27,8 +27,9 @@
     </div>
     <div class="">
         <div class="">
+			<div class="g-recaptcha" data-sitekey="6LdcQs0iAAAAAHBwGIOsrLKeXcHrs9MklbRGmyDA" data-callback="enableBtn">></div>
             <div class="">
-                <button class="action" type="submit">Kirim <i class="fa-solid fa-arrow-right"></i></button>
+                <button id="submit_details" class="action" type="submit" disabled>Send <i class="fa-solid fa-arrow-right"></i></button>
             </div>
         </div>
     </div>
