benerin list pengadaan

--- a/Views/Partials/listPengadaan.cshtml
+++ b/Views/Partials/listPengadaan.cshtml
@@ -6,7 +6,8 @@
     @{
         var selection = Umbraco.Content(Guid.Parse("f94cbf2f-4840-4b10-ad14-b19567f4ad36"))
             .Children()
-            .Where(x => x.IsVisible());
+            .Where(x => x.IsVisible())
+            .OrderByDescending(x => x.CreateDate);
     }
     @foreach (var item in selection)
     {
@@ -20,7 +21,7 @@
             <div class="konten">
                 <h2>@item.Value("NewsTitle")</h2>
 				<div class="pengadaan-konten-singkat">
-				    @item.Value("NewsRichTextContent")
+				    <p>@item.Value("PreviewContent")</p>
 				</div>
                 <a href="@item.Url()">
                     <span>@Umbraco.GetDictionaryValue("lihat selengkapnya")</span>
