--- a/Views/CareerPage.cshtml
+++ b/Views/CareerPage.cshtml
@@ -18,7 +18,7 @@
 	<h3>@Model.CareerContent1Title</h3>
 	<p>@Model.CareerContent1</p>
 	<img src="@Model.CareerContent1Image.Url()" class="w-100">
-	<h4>@Model.CareerContent2TitleHijau</h4>
+	<h4 class="mt-5">@Model.CareerContent2TitleHijau</h4>
 	<h3>@Model.CareerContent2Title</h3>
 	<p>@Model.CareerContent2</p>
 </div>
